@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19rc5
 
+	- The scheduler allowed some READ-ONLY job attributes to
+	  be set, which could cause the scheduler to fail on the
+	  next restart (STR #82)
 	- The lp and lpr commands did not report when the
 	  scheduler was not responding; instead, the user would
 	  incorrectly see a "no default destination" error (STR
